--- a/coach-stuff/coach-profile-editor.html
+++ b/coach-stuff/coach-profile-editor.html
@@ -41,10 +41,15 @@
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
     </a>
     <h1 class="text-2xl font-bold text-gray-900 flex-grow">Edit Profile</h1>
-    <button id="preview-profile-btn" class="text-sm font-semibold bg-white border border-gray-300 text-gray-700 px-4 py-2 rounded-lg hover:bg-gray-100 transition-colors flex items-center space-x-2">
+    
+    <button id="preview-profile-btn" class="text-sm font-semibold bg-white border border-gray-300 text-gray-700 px-4 py-2 rounded-lg hover:bg-gray-100 transition-colors flex items-center space-x-2 mr-3">
         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg>
         <span>Preview</span>
     </button>
+    
+    <a href="../index.html" id="logout-btn" class="p-2 text-gray-500 rounded-full hover:bg-red-100 hover:text-red-600 transition-colors" title="Logout">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path></svg>
+    </a>
 </header>
 
             <main class="flex-grow overflow-y-auto px-6 pb-28">
