--- a/add-food-details.html
+++ b/add-food-details.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', sans-serif; }
-        /* Hide number input arrows */
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
             -webkit-appearance: none;
@@ -19,27 +18,24 @@
         input[type=number] {
             -moz-appearance: textfield;
         }
-
-        /* Custom style for the subtle pressable button */
         .btn-press-effect {
-            /* Even more subtle initial shadow */
             box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.04);
             transition: all 0.2s ease-in-out;
         }
         .btn-press-effect:hover,
         .btn-press-effect.active {
-            /* Subtle inset shadow for a clean pressed effect */
             box-shadow: inset 0 1px 2px 0 rgb(0 0 0 / 0.05);
             transform: translateY(0.5px);
         }
-
-        /* Custom style to align input height with the button */
         #servings-amount-input {
-            height: 38px; /* Matching the button's new height */
+            height: 38px;
             padding-top: 0;
             padding-bottom: 0;
             line-height: normal;
         }
+        .mix-blend-multiply {
+    mix-blend-mode: multiply;
+}
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800 flex items-center justify-center min-h-screen p-4">
@@ -66,17 +62,14 @@
 
                     <div class="bg-white rounded-xl shadow-sm">
                         <div class="divide-y divide-gray-200">
-
                             <div class="flex justify-between items-center p-5">
                                 <span class="font-semibold text-gray-600">Meal</span>
                                 <span id="meal-type-text" class="font-bold text-pink-500 capitalize">Breakfast</span>
                             </div>
-
                             <div class="flex justify-between items-center p-5">
                                 <span class="font-semibold text-gray-600">Time</span>
                                 <span id="food-time-text" class="font-bold text-pink-500">00:00 AM</span>
                             </div>
-                            
                             <div class="flex justify-between items-center p-5">
                                 <label class="font-semibold text-gray-600">Serving</label>
                                 <div class="flex items-center gap-2">
@@ -86,7 +79,6 @@
                                     </button>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                     
@@ -115,7 +107,14 @@
                                 <p id="food-protein" class="font-bold text-lg text-gray-800">0 g</p>
                             </div>
                         </div>
-                    </div>
+
+                        <div class="mt-8 pt-4 w-full border-t border-gray-200 text-center text-xs">
+    <span class="text-gray-500">Nutrition data provided by </span>
+    <a href="https://platform.fatsecret.com" target="_blank" rel="noopener noreferrer" class="font-semibold text-gray-700 hover:text-pink-500 transition-colors">
+        FatSecret
+    </a>
+</div>
+                        </div>
                 </div>
             </div>
         </div>
