--- a/coach-stuff/coach-schedule.html
+++ b/coach-stuff/coach-schedule.html
@@ -270,7 +270,13 @@
 
             const renderAll = () => { renderCalendar(); renderSchedule(); };
             const isSameDay = (d1, d2) => d1.getFullYear() === d2.getFullYear() && d1.getMonth() === d2.getMonth() && d1.getDate() === d2.getDate();
-            const toYYYYMMDD = (date) => date.toISOString().split('T')[0];
+            // DENGAN FUNGSI BARU INI
+const toYYYYMMDD = (date) => {
+    const year = date.getFullYear();
+    const month = String(date.getMonth() + 1).padStart(2, '0');
+    const day = String(date.getDate()).padStart(2, '0');
+    return `${year}-${month}-${day}`;
+};
 
             const openModal = () => {
                 setFormType('event');
