--- a/community.html
+++ b/community.html
@@ -6,6 +6,7 @@
     <title>Food Tracker - Community</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel = "stylesheet" href="style.css">
     <style>
         body { font-family: 'Inter', sans-serif; }
         .glass-card { background: rgba(255, 255, 255, 0.6); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.25); }
@@ -76,6 +77,11 @@
             opacity: 1;
             padding-bottom: 0.75rem;
         }
+
+        .aurora-bg-1 { position: absolute; top: -80px; left: -100px; width: 320px; height: 320px; background-image: linear-gradient(to bottom right, #ffe4e6, #fce7f3); border-radius: 9999px; opacity: 0.8; filter: blur(90px); z-index: 1; }
+        .aurora-bg-2 { position: absolute; bottom: -100px; right: -120px; width: 320px; height: 320px; background-image: linear-gradient(to top left, #fbcfe8, #f472b6); border-radius: 9999px; opacity: 0.7; filter: blur(90px); z-index: 1; }
+        .aurora-gradient { background-image: linear-gradient(to right, #f472b6, #d946ef); }
+        
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800 flex items-center justify-center min-h-screen p-4">
@@ -123,8 +129,41 @@
     <div id="create-post-prompt" class="cursor-pointer mb-5"><div class="flex items-center w-full"><img src="https://i.pravatar.cc/150?u=current_user" alt="Your Avatar" class="w-10 h-10 rounded-full mr-3 flex-shrink-0"><div class="flex-grow bg-white border border-gray-200 rounded-xl py-2.5 px-4 shadow-sm hover:bg-white"><p id="post-placeholder-text" class="text-gray-500 text-sm">Share your meal, workout, or progress...</p></div></div></div>
     <div id="feed-container" class="space-y-5"></div>
 </div>
+            <div id="menu-overlay" class="hidden"></div>
 
-            <nav class="absolute bottom-4 left-1/2 -translate-x-1/2 w-[95%] max-w-sm z-20 glass-card grid grid-cols-5 items-center p-2 rounded-2xl"></nav>
+                <div id="emblem-menu" class="hidden">
+                    <a href="add-food.html" class="emblem-item">
+                        <svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path></svg>
+                        <span>Add Food</span>
+                    </a>
+                    <a href="progress.html" class="emblem-item">
+                        <svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path></svg>
+                        <span>Progress</span>
+                    </a>
+                    <a href="journal-parent.html" class="emblem-item">
+                        <svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path></svg>
+                        <span>Journal</span>
+                    </a>
+                     <a href="workout.html" class="emblem-item">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12.75 3.03v.568c0 .334.148.65.405.864l1.068.89c.442.369.535 1.024.217 1.464l-.657.98c-.318.476-.945.642-1.464.325l-1.068-.89a.993.993 0 00-1.218 0l-1.068.89c-.519.317-1.146.15-1.464-.325l-.657-.98c-.318-.44-.225-1.095.217-1.464l1.068-.89a.993.993 0 00.405-.864v-.568a3 3 0 013-3c.954 0 1.84.464 2.404 1.224a2.998 2.998 0 01.596 2.776zM21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        </svg>
+                        <span>Workout</span>
+                    </a>
+                     <a href="challenge.html" class="emblem-item">
+                        <svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19V6l1.8-2.4c.4-.5 1-.8 1.7-.8h.9c.7 0 1.3.3 1.7.8L17 6v13m-2-4h-4m-6-4h16"></path></svg>
+                        <span>Challenge</span>
+                    </a>
+                </div>
+
+                <nav class="absolute bottom-4 left-1/2 -translate-x-1/2 w-[95%] max-w-sm z-20 glass-card grid grid-cols-5 items-center p-2 rounded-2xl">
+                    <a href="community.html" class="flex flex-col items-center text-slate-500 py-1 hover:text-pink-600 transition-colors"><svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283-.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"></path></svg><span class="text-xs font-medium">Community</span></a>
+                    <a href="diary.html" class="flex flex-col items-center text-slate-500 py-1 hover:text-pink-600 transition-colors"><svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mb-1 rotate-180" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M5 3h4"></path><path d="M7 3v12"></path><path d="M4 15h6v3a3 3 0 0 1 -6 0v-3z"></path><path d="M14 21v-3a3 3 0 0 1 6 0v3"></path><path d="M17 21v-18"></path></svg><span class="text-xs font-medium">Diary</span></a>
+                    <button id="plus-button" class="aurora-gradient text-white w-16 h-16 rounded-full flex items-center justify-center shadow-lg shadow-pink-500/40 -mt-8 transform hover:scale-110 transition-transform"><svg class="w-9 h-9" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path></svg></button>
+                    <a href="marketplace.html" class="flex flex-col items-center text-pink-600 py-1"><svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"></path></svg><span class="text-xs font-bold">Marketplace</span></a>
+                    <a href="profile.html" class="flex flex-col items-center text-slate-500 py-1 hover:text-pink-600 transition-colors"><svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path></svg><span class="text-xs font-medium">Profile</span></a>
+                </nav>
+           
         </div>
     </div>
 
@@ -142,5 +181,6 @@
     <div id="share-workout-modal-container" class="fixed inset-0 z-50 flex items-center justify-center modal-hidden"></div>
 
     <script src="community.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
